--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                 <!--Resume-Button start-->
 
                 <a target="_blank"
-                    href="linkedin profile.pdf"
-                    class="btn-box">View
+                    href="raja resume.pdf"
+                    class="btn-box" >View
                     Resume</a>
 
                 <!--Resume-Button end-->
